--- a/projects/04-react-prueba-tecnica/package.json
+++ b/projects/04-react-prueba-tecnica/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@playwright/test": "^1.37.0",
     "vite": "^4.4.5"
   },
   "dependencies": {
